--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'https://jitpack.io' }
         jcenter()
-        maven { url 'https://dl.google.com/dl/android/maven2/' }
-        mavenCentral()
     }
 }
 
