--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         <activity android:name=".MainActivity">
         </activity>
         <activity android:name=".AlgorithmActivity">
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN"/>-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER"/>-->
+            <!--</intent-filter>-->
+        </activity>
+        <activity android:name=".AATestActivity_">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
