--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,7 @@ dependencies {
 
     //mpandroid 图形库
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+
+    //动态权限管理
+    compile 'pub.devrel:easypermissions:1.0.1'
 }
