添加按键消息派发流程测试

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".FontTestActivity_"/>
         <activity android:name=".MpAndroidChartsTestActivity_"/>
         <activity android:name=".EasyPermissionTestActivity_"/>
+        <activity android:name=".touchEventFlowTest.TouchEventFlowActivity_"/>
     </application>
 
 </manifest>
