--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity android:name=".MpAndroidChartsTestActivity_"/>
         <activity android:name=".EasyPermissionTestActivity_"/>
         <activity android:name=".touchEventFlowTest.TouchEventFlowActivity_"/>
+        <activity android:name=".PickerViewTestActivity_"/>
     </application>
 
 </manifest>
